[package]
name = "rc505_rs"
version = "0.1.0"
edition = "2024"

[features]
default = []
asio = ["cpal/asio"]

[[bin]]
name = "rc505_rs"
path = "src/main.rs"

[[bin]]
name = "rc505_launcher"
path = "src/bin/launcher.rs"

[dependencies]
cpal = "0.15"
ringbuf = "0.3"
anyhow = "1.0"
eframe = "0.27"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
